增加localDeploy task